# autoresearch-mlx

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Makefile  NOTICE  README.md  bench.py  config.py  pyproject.toml  results.tsv
docs/adr/: ADR-001-attribution.md  ADR-002-dependencies.md  ADR-003-rust-scope.md
rust/bench-rs/: Cargo.toml  README.md
rust/bench-rs/src/: main.rs
tests/: test_smoke.py
