[package]
name = "bench-rs"
version = "0.1.0"
edition = "2021"
description = "Rust sibling of bench.py — analyze results.tsv from the CLI"
license = "MIT"
publish = false

[[bin]]
name = "bench-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
